evaluate python file

--- a/just_rescale_image_with_xml.ipynb
+++ b/just_rescale_image_with_xml.ipynb
@@ -11,13 +11,14 @@
     "import xml.etree.ElementTree as ET\n",
     "from PIL import Image\n",
     "\n",
-    "#time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
-    "#time_str = '20190328'\n",
-    "\n",
-    "generated_image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_motorbike_bicycle/VOC2007/JPEGImages/'\n",
-    "generated_xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_motorbike_bicycle/VOC2007/Annotations/'\n",
-    "xml_dir = generated_xml_dir\n",
-    "image_dir = generated_image_dir\n",
+    "time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
+    "time_str = '20190507'\n",
+    "xml_dir = '/data/darknet/python/' + time_str + '_xml_croped/'\n",
+    "image_dir = '/data/darknet/python/' + time_str + '_image_croped/'\n",
+    "#generated_image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_motorbike_bicycle/VOC2007/JPEGImages/'\n",
+    "#generated_xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_motorbike_bicycle/VOC2007/Annotations/'\n",
+    "generated_xml_dir = xml_dir\n",
+    "generated_image_dir = image_dir\n",
     "\n",
     "#os.system('mkdir -p ' + generated_image_dir)\n",
     "#os.system('mkdir -p ' + generated_xml_dir)\n",
@@ -43,8 +44,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11404\n",
-      "11404\n"
+      "7849\n",
+      "7849\n"
      ]
     }
    ],
