--- a/annotations_all_piple_line.ipynb
+++ b/annotations_all_piple_line.ipynb
@@ -2,25 +2,126 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "861\n"
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n",
+      "test\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-cdfa7bb6207b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    359\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mobj_element\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mobjs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    360\u001b[0m             \u001b[0mbbox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_bbox_from_xmlobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj_element\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 361\u001b[0;31m             \u001b[0mimg_obj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_obj_from_image_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbbox\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    362\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    363\u001b[0m             \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_cls_from_xmlobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj_element\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-8-cdfa7bb6207b>\u001b[0m in \u001b[0;36mget_obj_from_image_file\u001b[0;34m(file, bbox)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_obj_from_image_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbbox\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m     \u001b[0mimg_obj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbbox\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbbox\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbbox\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbbox\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m    \u001b[0;31m#print(img_obj.shape)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -33,7 +134,7 @@
     "from pathlib import Path\n",
     "\n",
     "time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
-    "pre_fix = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Rider/VOC2007/'\n",
+    "pre_fix = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_whgk/VOC2007/'\n",
     "xml_dir = pre_fix + '/Annotations/'\n",
     "image_dir = pre_fix + '/JPEGImages/'\n",
     "\n",
@@ -326,7 +427,7 @@
     "    return rotated_img\n",
     "\n",
     "def get_fliped_bbox(bbox, img_w):\n",
-    "    return (img_w-bbox[0], img_w-bbox[1], bbox[2], bbox[3])\n",
+    "    return (img_w-bbox[1], img_w-bbox[0], bbox[2], bbox[3])\n",
     "\n",
     "def generate_etree(etree_old):\n",
     "    root_old = etree_old.getroot()    \n",
@@ -359,12 +460,19 @@
     "    #print(new_bbox)\n",
     "    return new_bbox\n",
     "\n",
-    "############################# for expand obj target-intercouses (overlaps) ##################################\n",
-    "LOOP_TIMES = 3\n",
+    "def xml_reverse_xmin_xmax(etree):\n",
+    "    root = etree.getroot()\n",
+    "    objects = root.findall('object')\n",
+    "    for obj in objects:\n",
+    "        xmlbox = obj.find('bndbox')\n",
+    "        xmlbox.find('xmin').text, xmlbox.find('xmax').text = xmlbox.find('xmax').text, xmlbox.find('xmin').text\n",
+    "    return etree\n",
+    "\n",
     "REPEAT_TIMES = 2\n",
     "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "seed_xml_names.sort()\n",
-    "cls_to_rotate = ['rider-mo', 'rider-bi']\n",
+    "all_class = ['bus', 'car', 'truck']\n",
+    "target_class = ['bus', 'truck']\n",
     "\n",
     "for i in range (LOOP_TIMES):\n",
     "    for xml_name in seed_xml_names:\n",
@@ -377,6 +485,7 @@
     "        img = cv2.imread(img_name)\n",
     "        objs = get_obj_from_xml(xml_name)\n",
     "        bboxes = get_bboxes_from_etree(tree)\n",
+    "        \n",
     "        flag_found = False\n",
     "        i = 0\n",
     "        #------------------------------------------------------------\n",
@@ -386,7 +495,7 @@
     "            img_obj = get_obj_from_image_file(img_name, bbox)\n",
     "\n",
     "            cls = get_cls_from_xmlobj(obj_element)\n",
-    "            if (cls in cls_to_rotate):\n",
+    "            if (cls in all_class):\n",
     "                bboxes_target[(i)] = bbox\n",
     "            i = i + 1\n",
     "        id_dic = {}\n",
@@ -418,12 +527,12 @@
     "                id_dic[k__].sort()\n",
     "        #print('id_dic:{0}'.format(id_dic))\n",
     "\n",
-    "        '''\n",
-    "        for __k in list(id_dic.keys()):\n",
-    "            if(len(id_dic[__k]) == 0):\n",
-    "                id_dic.pop(__k)       \n",
+    "        \n",
+    "        #for __k in list(id_dic.keys()):\n",
+    "        #    if(len(id_dic[__k]) == 0):\n",
+    "        #        id_dic.pop(__k)       \n",
     "        #print('id_dic:{0}'.format(id_dic))\n",
-    "        '''\n",
+    "        \n",
     "        \n",
     "        v_list = []\n",
     "        id_dic_refine = {}\n",
@@ -443,6 +552,10 @@
     "            for kk, vv in id_dic.items():\n",
     "                if(len(vv) == 0):\n",
     "                    templist = [bboxes[kk]]\n",
+    "                    cls = get_cls_from_xmlobj(objs[kk])\n",
+    "                    if(cls not in target_class):\n",
+    "                        continue\n",
+    "                    print(cls)\n",
     "                    ##templist.append(bboxes[kk])\n",
     "                    img_obj_shape = generate_union_bbox_shape(templist)\n",
     "                    union_bbox = generate_union_bbox_(templist)\n",
@@ -498,7 +611,6 @@
     "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "seed_xml_names.sort()\n",
     "\n",
-    "print(len(seed_xml_names))\n",
     "for xml_name in seed_xml_names:\n",
     "        img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
     "        xml_name = SEED_XML_DIR + xml_name\n",
@@ -537,8 +649,8 @@
     "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "seed_xml_names.sort()\n",
     "\n",
-    "croped_shape = [480, 640]\n",
-    "LOOPTIMES = 1\n",
+    "\n",
+    "LOOPTIMES = 2\n",
     "for L in range(LOOPTIMES):\n",
     "    for xml_name in seed_xml_names:\n",
     "        img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
@@ -629,12 +741,12 @@
     "        root = tree.getroot()\n",
     "\n",
     "        for obj in root.iter('object'):\n",
-    "            '''\n",
-    "            difficult = obj.find('difficult').text\n",
-    "            cls_ = obj.find('name').text\n",
-    "            if cls_ not in classes_ or int(difficult)==1:\n",
-    "                continue\n",
-    "            '''\n",
+    "            \n",
+    "            #difficult = obj.find('difficult').text\n",
+    "            #cls_ = obj.find('name').text\n",
+    "            #if cls_ not in classes_ or int(difficult)==1:\n",
+    "            #    continue\n",
+    "            \n",
     "            xmlbox = obj.find('bndbox')\n",
     "            xmin, xmax = int(xmlbox.find('xmin').text), int(xmlbox.find('xmax').text)\n",
     "            ymin, ymax = int(xmlbox.find('ymin').text), int(xmlbox.find('ymax').text)\n",
@@ -673,12 +785,12 @@
     "        root = tree.getroot()\n",
     "\n",
     "        for obj in root.iter('object'):\n",
-    "            '''\n",
-    "            difficult = obj.find('difficult').text\n",
-    "            cls_ = obj.find('name').text\n",
-    "            if cls_ not in classes_ or int(difficult)==1:\n",
-    "                continue\n",
-    "            '''\n",
+    "            \n",
+    "            #difficult = obj.find('difficult').text\n",
+    "            #cls_ = obj.find('name').text\n",
+    "            #if cls_ not in classes_ or int(difficult)==1:\n",
+    "            #    continue\n",
+    "            \n",
     "            xmlbox = obj.find('bndbox')\n",
     "            xmin, xmax = int(xmlbox.find('xmin').text), int(xmlbox.find('xmax').text)\n",
     "            ymin, ymax = int(xmlbox.find('ymin').text), int(xmlbox.find('ymax').text)\n",
@@ -687,7 +799,53 @@
     "            xmlbox.find('ymin').text = str(int(ymin*(1-y_shrink_scale) + shrink_heigt/2))\n",
     "            xmlbox.find('ymax').text = str(int(ymax*(1-y_shrink_scale) + shrink_heigt/2))\n",
     "        tree.write(GENE_XML_DIR + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) +  \"_\" + str(padding) +\"_\" + xml)\n",
-    "        \n",
+    "\n",
+    "for i in [0.2, 0.3]:\n",
+    "    x_shrink_scale = i\n",
+    "    y_shrink_scale = i\n",
+    "    padding = 127.5\n",
+    "    for xml in seed_xml_names:\n",
+    "\n",
+    "        # generate new jpg image file\n",
+    "        img_file = xml[:-4] + '.jpg'\n",
+    "        img_path = SEED_IMG_DIR + img_file\n",
+    "        img = cv2.imread(img_path)\n",
+    "        array = np.zeros_like(img)\n",
+    "        array.fill(padding)   \n",
+    "        new_w = int(img.shape[1]*(1-x_shrink_scale))\n",
+    "        new_h = int(img.shape[0]*(1-y_shrink_scale))\n",
+    "        shrink_width = img.shape[1] - new_w\n",
+    "        shrink_heigt = img.shape[0] - new_h\n",
+    "        #img = cv2.resize(img, (new_w, img.shape[0]))\n",
+    "        #array[:, int(shrink_width/2):int(shrink_width/2) + new_w] = img\n",
+    "        img = cv2.resize(img, (new_w, new_h))\n",
+    "        array[int(shrink_heigt/2):int(shrink_heigt/2) + new_h, int(shrink_width/2):int(shrink_width/2) + new_w] = img\n",
+    "        cv2.imwrite(GENE_IMG_DIR + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) + \"_\" + str(padding) + \"_\"+ img_file, array)\n",
+    "\n",
+    "        # generate new anotation xml file    \n",
+    "        xml_path = SEED_XML_DIR + xml\n",
+    "        in_file = open(xml_path)\n",
+    "        tree=ET.parse(in_file)\n",
+    "        root = tree.getroot()\n",
+    "\n",
+    "        for obj in root.iter('object'):\n",
+    "            \n",
+    "            #difficult = obj.find('difficult').text\n",
+    "            #cls_ = obj.find('name').text\n",
+    "            #if cls_ not in classes_ or int(difficult)==1:\n",
+    "            #    continue\n",
+    "            \n",
+    "            xmlbox = obj.find('bndbox')\n",
+    "            xmin, xmax = int(xmlbox.find('xmin').text), int(xmlbox.find('xmax').text)\n",
+    "            ymin, ymax = int(xmlbox.find('ymin').text), int(xmlbox.find('ymax').text)\n",
+    "            xmlbox.find('xmin').text = str(int(xmin*(1-x_shrink_scale) + shrink_width/2))\n",
+    "            xmlbox.find('xmax').text = str(int(xmax*(1-x_shrink_scale) + shrink_width/2))\n",
+    "            xmlbox.find('ymin').text = str(int(ymin*(1-y_shrink_scale) + shrink_heigt/2))\n",
+    "            xmlbox.find('ymax').text = str(int(ymax*(1-y_shrink_scale) + shrink_heigt/2))\n",
+    "        tree.write(GENE_XML_DIR + \"ge_shrink_scale_\" + str(x_shrink_scale) + \"_\" + str(y_shrink_scale) +  \"_\" + str(padding) +\"_\" + xml)\n",
+    "        #cv2.imshow(\"demo\", array)\n",
+    "        #cv2.waitKey(5000)\n",
+    "        #break  \n",
     "        \n",
     "os.system('python3 /datasets/labelImg/labelImg.py &')"
    ]
