--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,51 +307,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['120000', '60000', '70000', '150000', '80000', '140000', '130000', '160000', '90000', '170000', '50000']\n",
+      "['yolov3-tiny-ncs-without-last-maxpool-refined-anchors-3cls-extend-remove-maxpooling_new_20000', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors-3cls-extend-remove-maxpooling_new_27000', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors-3cls-extend-remove-maxpooling_new_new_40000']\n",
       "-------------------------------------\n",
-      "120000\n",
-      "good  : 86818\n",
-      "erro  : 18474\n",
-      "miss  : 8851\n",
-      "total : 94866\n",
-      "good rate : 0.9151645478886008\n",
-      "erro rate : 0.19473784074378597\n",
-      "miss rate : 0.0933000231906057\n",
-      "clss rate : 0.9907507659701905\n",
+      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors-3cls-extend-remove-maxpooling_new_20000\n",
+      "good  : 60092\n",
+      "erro  : 10446\n",
+      "miss  : 15414\n",
+      "total : 72998\n",
+      "good rate : 0.8232006356338529\n",
+      "erro rate : 0.14309981095372476\n",
+      "miss rate : 0.21115647004027507\n",
+      "clss rate : 0.9582639952073487\n",
       "-------------------------------------\n",
-      "130000\n",
-      "good  : 0\n",
-      "erro  : 0\n",
-      "miss  : 0\n",
-      "total : 0\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-55c107b57503>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     75\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'total : {0}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_obj_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'good rate : {0}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_good_detected_num\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mtotal_obj_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'erro rate : {0}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_erro_detected_num\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mtotal_obj_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'miss rate : {0}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtotal_miss_detected_num\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mtotal_obj_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors-3cls-extend-remove-maxpooling_new_27000\n",
+      "good  : 62418\n",
+      "erro  : 12120\n",
+      "miss  : 13088\n",
+      "total : 72994\n",
+      "good rate : 0.8551113790174535\n",
+      "erro rate : 0.16604104446940846\n",
+      "miss rate : 0.1793024084171302\n",
+      "clss rate : 0.9597551988208529\n",
+      "-------------------------------------\n",
+      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors-3cls-extend-remove-maxpooling_new_new_40000\n",
+      "good  : 64264\n",
+      "erro  : 13635\n",
+      "miss  : 11252\n",
+      "total : 73002\n",
+      "good rate : 0.8803046491876935\n",
+      "erro rate : 0.18677570477521163\n",
+      "miss rate : 0.15413276348593188\n",
+      "clss rate : 0.9608801195070334\n"
      ]
     }
    ],
    "source": [
     "temp_list = [i.split('/')[-1] for i in seed_xml_names]\n",
     "\n",
-    "generated_xml_dir_father = '/data/darknet/python/' + time_str + '_detection_result/'\n",
+    "generated_xml_dir_father = '/data/darknet/python/' + time_str + '_detection_result_864/'\n",
     "generated_xml_dir_list = os.listdir(generated_xml_dir_father)\n",
     "print(generated_xml_dir_list)\n",
     "generated_xml_dir_list.sort()\n",
+    "cls_map = {'B':'bus','C':'car', 'T':'truck'}\n",
     "\n",
     "for generated_xml_dir in generated_xml_dir_list:\n",
     "    print('-------------------------------------')\n",
@@ -403,7 +407,7 @@
     "                    detected_num += 1\n",
     "                    s_cls = get_cls_from_xmlobj(s_max_obj)\n",
     "                    g_cls = get_cls_from_xmlobj(g_obj)\n",
-    "                    if(s_cls == g_cls):\n",
+    "                    if(s_cls == cls_map[g_cls]):\n",
     "                        total_good_classify_num += 1    \n",
     "                        s_objs.remove(s_max_obj)                \n",
     "                else:\n",
