--- a/just_get_obj_with_info.ipynb
+++ b/just_get_obj_with_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,20 +15,18 @@
     "from pathlib import Path\n",
     "\n",
     "time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
-    "#image_dir = '/data/darknet/python/20190111_image/'\n",
-    "#xml_dir = '/data/darknet/python/20190111_xml/'\n",
-    "'''\n",
-    "image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/JPEGImages/'\n",
-    "xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/Annotations/'\n",
+    "\n",
+    "image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_whgk/VOC2007/JPEGImages/'\n",
+    "xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_whgk/VOC2007/Annotations/'\n",
     "\n",
     "SEED_XML_DIR = xml_dir\n",
     "SEED_IMG_DIR = image_dir\n",
-    "'''\n",
+    "\n",
     "\n",
     "GENE_OBJ_DIR = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/selected/obj/'\n",
     "os.system('mkdir -p ' + GENE_OBJ_DIR)\n",
     "\n",
-    "def get_obj_from_xml(xml):\n",
+    "def get_obj_from_xml(xml_name):\n",
     "    in_file = open(xml_name)\n",
     "    tree=ET.parse(in_file)\n",
     "    root = tree.getroot()\n",
@@ -50,20 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#classes = ['bus', 'car', 'truck', 'motorbike', 'bicycle', 'person']\n",
     "classes = ['bus', 'truck']\n",
-    "for cls in classes:\n",
-    "    #image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/JPEGImages/'\n",
-    "    #xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/Annotations/'\n",
-    "    image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/selected/image/' + cls + '/'\n",
-    "    xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/selected/xml/' + cls + '/'\n",
-    "    SEED_XML_DIR = xml_dir\n",
-    "    SEED_IMG_DIR = image_dir\n",
-    "    \n",
+    "for cls in classes:    \n",
     "    seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "    seed_xml_names.sort()\n",
     "\n",
@@ -84,8 +75,8 @@
     "            img_obj = get_obj_from_image_file(img_name, bbox)\n",
     "            i = i+1\n",
     "            cls = get_cls_from_xmlobj(obj_element)\n",
-    "            #if(cls not in classes):\n",
-    "                #continue\n",
+    "            if(cls not in classes):\n",
+    "                continue\n",
     "            cls_path = Path(GENE_OBJ_DIR + cls)\n",
     "            if(not cls_path.is_dir()):\n",
     "                os.system(\"mkdir -p \" + GENE_OBJ_DIR + cls) # If use 'cls_path' : Can't convert 'PosixPath' object to str implicitly\n",
