--- a/just_select_image_and_xml.ipynb
+++ b/just_select_image_and_xml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,10 +16,11 @@
     "\n",
     "DATASETS_NAME = \"COCO\"\n",
     "DATASETS_DIR = '/media/yyp/DATA/Public_Datasets/COCO/'\n",
-    "DATASETS_XML_DIR = DATASETS_DIR + 'annotations/'\n",
-    "DATASETS_IMG_DIR = DATASETS_DIR + 'train2017/'\n",
-    "SELECTED_IMG_DIR = '../generated/selceted_from_' + DATASETS_NAME + '_image/'\n",
-    "SELECTED_XML_DIR = '../generated/selceted_from_' + DATASETS_NAME + '_xml/'\n",
+    "DATASETS_XML_DIR = DATASETS_DIR + '2017/Annotations/format_voc/Annotations/'\n",
+    "DATASETS_IMG_DIR = DATASETS_DIR + '2017/JPEGImages/'\n",
+    "SELECTED_IMG_DIR = '/media/yyp/DATA/Public_Datasets/COCO/selceted_from_' + DATASETS_NAME + '_image/'\n",
+    "SELECTED_XML_DIR = '/media/yyp/DATA/Public_Datasets/COCO/selceted_from_' + DATASETS_NAME + '_xml/'\n",
+    "SELECTED_CLS = ['person', 'bus', 'car', 'truck']\n",
     "SELECTED_CLS = ['person']\n",
     "    \n",
     "def get_obj_from_xml(xml):\n",
@@ -39,11 +40,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69246\n"
+     ]
+    }
+   ],
    "source": [
+    "###################################################################################################\n",
+    "##                              Just select person\n",
+    "###################################################################################################\n",
     "seed_xml_names = os.listdir(DATASETS_XML_DIR)\n",
+    "print(len(seed_xml_names))\n",
     "for xml_name in seed_xml_names:\n",
     "    if(not xml_name.endswith('.xml')):\n",
     "        continue\n",
@@ -74,6 +87,92 @@
     "        os.system('cp ' + xml_name + ' ' + SELECTED_XML_DIR + cls + '/')\n",
     "        #break\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################################################################################################\n",
+    "##-----------------------------------selecte by class name------------------------------------##\n",
+    "######################################################################################################\n",
+    "for xml_name in seed_xml_names:\n",
+    "    img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
+    "    xml_name = SEED_XML_DIR + xml_name\n",
+    "    #print(img_name)\n",
+    "    #print(xml_name)\n",
+    "    tree=ET.parse(xml_name)\n",
+    "    #img = cv2.imread(img_name)    \n",
+    "    objs = get_obj_from_xml(xml_name)\n",
+    "    #print(objs)\n",
+    "    #i = -1\n",
+    "    \n",
+    "    dic_cls = {'bus':0,'car':0,'truck':0,'person':0,'motorbike':0,'bicycle':0}\n",
+    "    for obj_element in objs:\n",
+    "        #bbox = get_bbox_from_xmlobj(obj_element)\n",
+    "        #img_obj = get_obj_from_image_file(img_name, bbox)\n",
+    "        #i = i+1\n",
+    "        cls = get_cls_from_xmlobj(obj_element)\n",
+    "        if(not cls in classes):\n",
+    "            continue\n",
+    "        dic_cls[cls] = dic_cls[cls] + 1\n",
+    "    \n",
+    "    if(dic_cls['person'] > 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'person'\n",
+    "    elif(dic_cls['car'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'car'\n",
+    "    elif(dic_cls['bus'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'bus'\n",
+    "    elif(dic_cls['truck'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'truck'\n",
+    "    elif(dic_cls['motorbike'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'motorbike'\n",
+    "    elif(dic_cls['bicycle'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0):\n",
+    "        cls = 'bicycle'\n",
+    "    else:\n",
+    "        continue\n",
+    "    path_imag = Path(SELECTED_IMG_DIR + cls + '/')\n",
+    "    path_xml = Path(SELECTED_XML_DIR + cls + '/')\n",
+    "    if(not path_imag.is_dir()):\n",
+    "        os.system(\"mkdir -p \" + SELECTED_IMG_DIR + cls + '/')\n",
+    "    if(not path_xml.is_dir()):\n",
+    "        os.system(\"mkdir -p \" + SELECTED_XML_DIR + cls + '/')\n",
+    "    os.system('cp ' + img_name + ' ' + SELECTED_IMG_DIR + cls + '/')\n",
+    "    os.system('cp ' + xml_name + ' ' + SELECTED_XML_DIR + cls + '/')\n",
+    "        \n",
+    "    #break"
    ]
   }
  ],
