--- a/just_select_xmls_and_images_with_certain_classes.ipynb
+++ b/just_select_xmls_and_images_with_certain_classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -18,16 +18,16 @@
     "\n",
     "classes = ['bus', 'car','truck', 'person', 'motorbike', 'bicycle']\n",
     "time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
-    "#image_dir = '/data/darknet/python/' + 'coco_image_rider/'\n",
-    "#xml_dir = '/data/darknet/python/' + '20190514coco_xml_rider/'\n",
-    "image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_motorbike_bicycle/VOC2007/JPEGImages/'\n",
-    "xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_motorbike_bicycle/VOC2007/Annotations/'\n",
-    "#GENE_IMG_DIR = '/data/darknet/python/' + time_str + '_image_selected/'\n",
-    "#GENE_XML_DIR = '/data/darknet/python/' + time_str + '_xml_selected/'\n",
-    "GENE_IMG_DIR = '/data/darknet/python/' + 'test_image/'\n",
-    "GENE_XML_DIR = '/data/darknet/python/' + 'test_xml/'\n",
-    "SEED_XML_DIR = xml_dir\n",
-    "SEED_IMG_DIR = image_dir\n",
+    "DATASETS_NAME = \"COCO\"\n",
+    "DATASETS_DIR = '/media/yyp/DATA/Public_Datasets/COCO/'\n",
+    "DATASETS_XML_DIR = DATASETS_DIR + '2017/Annotations/format_voc/Annotations/'\n",
+    "DATASETS_IMG_DIR = DATASETS_DIR + '2017/JPEGImages/'\n",
+    "SELECTED_IMG_DIR = '/media/yyp/DATA/Public_Datasets/COCO/selceted_from_' + DATASETS_NAME + '_image/'\n",
+    "SELECTED_XML_DIR = '/media/yyp/DATA/Public_Datasets/COCO/selceted_from_' + DATASETS_NAME + '_xml/'\n",
+    "selected_image_dir = SELECTED_IMG_DIR\n",
+    "selected_xml_dir = SELECTED_XML_DIR\n",
+    "SEED_XML_DIR = DATASETS_XML_DIR\n",
+    "SEED_IMG_DIR = DATASETS_IMG_DIR\n",
     "\n",
     "#GENE_OBJ_DIR = '/media/yyp/DATA/Public_Datasets/COCO/2014/' + time_str + '_jenerated_obj/'\n",
     "os.system('mkdir -p ' + GENE_IMG_DIR)\n",
@@ -140,6 +140,92 @@
     "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "seed_xml_names.sort()\n",
     "#classes = ['bus', 'car', 'truck', 'motorbike', 'bicycle', 'person']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######################################################################################################\n",
+    "##-----------------------------------selecte by class name------------------------------------##\n",
+    "######################################################################################################\n",
+    "for xml_name in seed_xml_names:\n",
+    "    img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
+    "    xml_name = SEED_XML_DIR + xml_name\n",
+    "    #print(img_name)\n",
+    "    #print(xml_name)\n",
+    "    tree=ET.parse(xml_name)\n",
+    "    #img = cv2.imread(img_name)    \n",
+    "    objs = get_obj_from_xml(xml_name)\n",
+    "    #print(objs)\n",
+    "    #i = -1\n",
+    "    \n",
+    "    dic_cls = {'bus':0,'car':0,'truck':0,'person':0,'motorbike':0,'bicycle':0}\n",
+    "    for obj_element in objs:\n",
+    "        #bbox = get_bbox_from_xmlobj(obj_element)\n",
+    "        #img_obj = get_obj_from_image_file(img_name, bbox)\n",
+    "        #i = i+1\n",
+    "        cls = get_cls_from_xmlobj(obj_element)\n",
+    "        if(not cls in classes):\n",
+    "            continue\n",
+    "        dic_cls[cls] = dic_cls[cls] + 1\n",
+    "    \n",
+    "    if(dic_cls['person'] > 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'person'\n",
+    "    elif(dic_cls['car'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'car'\n",
+    "    elif(dic_cls['bus'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'bus'\n",
+    "    elif(dic_cls['truck'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'truck'\n",
+    "    elif(dic_cls['motorbike'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['bicycle'] == 0):\n",
+    "        cls = 'motorbike'\n",
+    "    elif(dic_cls['bicycle'] > 0 \n",
+    "       and dic_cls['person'] == 0 \n",
+    "       and dic_cls['bus'] == 0 \n",
+    "       and dic_cls['truck'] == 0 \n",
+    "       and dic_cls['car'] == 0 \n",
+    "       and dic_cls['motorbike'] == 0):\n",
+    "        cls = 'bicycle'\n",
+    "    else:\n",
+    "        continue\n",
+    "    path_imag = Path(SELECTED_IMG_DIR + cls + '/')\n",
+    "    path_xml = Path(SELECTED_XML_DIR + cls + '/')\n",
+    "    if(not path_imag.is_dir()):\n",
+    "        os.system(\"mkdir -p \" + SELECTED_IMG_DIR + cls + '/')\n",
+    "    if(not path_xml.is_dir()):\n",
+    "        os.system(\"mkdir -p \" + SELECTED_XML_DIR + cls + '/')\n",
+    "    os.system('cp ' + img_name + ' ' + SELECTED_IMG_DIR + cls + '/')\n",
+    "    os.system('cp ' + xml_name + ' ' + SELECTED_XML_DIR + cls + '/')\n",
+    "        \n",
+    "    #break"
    ]
   },
   {
@@ -18741,62 +18827,6 @@
     "    cv2.imwrite(GENE_IMG_DIR  + img_name.split('/')[-1], image_data)\n",
     "    etree.write(GENE_XML_DIR  + xml_name.split('/')[-1])\n",
     "    #break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "######################################################################################################\n",
-    "##-----------------------------------------selecte person-------------------------------------------##\n",
-    "######################################################################################################\n",
-    "for xml_name in seed_xml_names:\n",
-    "    img_name = SEED_IMG_DIR + xml_name[:-3] + 'jpg'\n",
-    "    xml_name = SEED_XML_DIR + xml_name\n",
-    "    #print(img_name)\n",
-    "    #print(xml_name)\n",
-    "    tree=ET.parse(xml_name)\n",
-    "    #img = cv2.imread(img_name)    \n",
-    "    objs = get_obj_from_xml(xml_name)\n",
-    "    #print(objs)\n",
-    "    #i = -1\n",
-    "    \n",
-    "    dic_cls = {'bus':0,'car':0,'truck':0,'person':0,'motorbike':0,'bicycle':0}\n",
-    "    for obj_element in objs:\n",
-    "        #bbox = get_bbox_from_xmlobj(obj_element)\n",
-    "        #img_obj = get_obj_from_image_file(img_name, bbox)\n",
-    "        #i = i+1\n",
-    "        cls = get_cls_from_xmlobj(obj_element)\n",
-    "        if(not cls in classes):\n",
-    "            continue\n",
-    "        dic_cls[cls] = dic_cls[cls] + 1\n",
-    "        #print(cls)\n",
-    "        \n",
-    "        #cls_path = Path(GENE_OBJ_DIR + cls)\n",
-    "        #if(not cls_path.is_dir()):\n",
-    "        #    os.system(\"mkdir -p \" + GENE_OBJ_DIR + cls) # If use 'cls_path' : Can't convert 'PosixPath' object to str implicitly\n",
-    "        #save_path_name = GENE_OBJ_DIR + cls + \"/\" + xml_name.split('/')[-1][:-4] + \"_\" + str(bbox[0]) + \\\n",
-    "        #\"_\" + str(bbox[1]) + \"_\" + str(bbox[2]) + \"_\" + str(bbox[3]) + '_' + str(i) + \".jpg\"\n",
-    "        #print(save_path_name)\n",
-    "        #cv2.imwrite(save_path_name, img_obj)\n",
-    "        #pick out the image and xml\n",
-    "    if not (dic_cls['person'] > dic_cls['bus']\n",
-    "    and dic_cls['person'] > dic_cls['car'] \n",
-    "    and dic_cls['person'] > dic_cls['truck']\n",
-    "    and dic_cls['person'] > dic_cls['motorbike'] \n",
-    "    and dic_cls['person'] > dic_cls['bicycle']):\n",
-    "        continue\n",
-    "    print(dic_cls['person'])\n",
-    "    cls = 'person'   \n",
-    "    pick_out_command = \"mv \" + img_name + \" \" + selected_image_dir + cls + '/'\n",
-    "    print(pick_out_command)\n",
-    "    os.system(pick_out_command)\n",
-    "    pick_out_command = \"mv \" + xml_name + \" \" + selected_xml_dir + cls + '/'\n",
-    "    print(pick_out_command)\n",
-    "    os.system(pick_out_command)\n",
-    "    #break"
    ]
   }
  ],
