--- a/just_get_obj_with_info.ipynb
+++ b/just_get_obj_with_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,14 @@
     "\n",
     "time_str = (datetime.datetime.now()).strftime(\"%Y%m%d\")\n",
     "\n",
-    "image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_whgk/VOC2007/JPEGImages/'\n",
-    "xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_whgk/VOC2007/Annotations/'\n",
+    "image_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/JPEGImages/'\n",
+    "xml_dir = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/Annotations/'\n",
     "\n",
     "SEED_XML_DIR = xml_dir\n",
     "SEED_IMG_DIR = image_dir\n",
     "\n",
     "\n",
-    "GENE_OBJ_DIR = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/selected/obj/'\n",
+    "GENE_OBJ_DIR = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/selected/' + time_str + '/obj/'\n",
     "os.system('mkdir -p ' + GENE_OBJ_DIR)\n",
     "\n",
     "def get_obj_from_xml(xml_name):\n",
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#classes = ['bus', 'car', 'truck', 'motorbike', 'bicycle', 'person']\n",
-    "classes = ['bus', 'truck']\n",
+    "classes = ['bus']\n",
     "for cls in classes:    \n",
     "    seed_xml_names = os.listdir(SEED_XML_DIR)\n",
     "    seed_xml_names.sort()\n",
