--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,55 +307,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000new', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000old']\n",
+      "len temp_list : 4973\n",
+      "['yolov3-tiny-ncs-without-last-maxpool-refined-anchors-6cls-extend-remove-maxpooling_new_150000', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors_130000new', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000']\n",
+      "-------------------------------------\n",
+      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors-6cls-extend-remove-maxpooling_new_150000\n",
+      "len generated_xml_names:4948\n",
+      "good  : 42579\n",
+      "erro  : 5175\n",
+      "miss  : 7888\n",
+      "total : 49705\n",
+      "good rate : 0.8566341414344634\n",
+      "erro rate : 0.10411427421788552\n",
+      "miss rate : 0.1586963082184891\n",
+      "clss rate : 0.9821038540125414\n",
+      "-------------------------------------\n",
+      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors_130000new\n",
+      "len generated_xml_names:4939\n",
+      "good  : 41581\n",
+      "erro  : 5583\n",
+      "miss  : 8883\n",
+      "total : 49706\n",
+      "good rate : 0.8365388484287611\n",
+      "erro rate : 0.11232044421196637\n",
+      "miss rate : 0.17871081961936186\n",
+      "clss rate : 0.9817705201895096\n",
       "-------------------------------------\n",
       "yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000\n",
-      "good  : 24400\n",
-      "erro  : 2694\n",
-      "miss  : 3748\n",
-      "total : 27995\n",
-      "good rate : 0.8715842114663332\n",
-      "erro rate : 0.09623146990534023\n",
-      "miss rate : 0.1338810501875335\n",
-      "clss rate : 0.9937295081967213\n",
-      "-------------------------------------\n",
-      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000new\n",
-      "good  : 10132\n",
-      "erro  : 775\n",
-      "miss  : 18321\n",
-      "total : 27797\n",
-      "good rate : 0.364499766161816\n",
-      "erro rate : 0.027880706551066663\n",
-      "miss rate : 0.6590999028672159\n",
-      "clss rate : 0.935254638768259\n",
-      "-------------------------------------\n",
-      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000old\n",
-      "good  : 8141\n",
-      "erro  : 497\n",
-      "miss  : 19944\n",
-      "total : 27462\n",
-      "good rate : 0.29644599810647443\n",
-      "erro rate : 0.018097735052071955\n",
-      "miss rate : 0.726239895127813\n",
-      "clss rate : 0.9234737747205503\n"
+      "len generated_xml_names:4940\n",
+      "good  : 42149\n",
+      "erro  : 4472\n",
+      "miss  : 8307\n",
+      "total : 49708\n",
+      "good rate : 0.8479319224269736\n",
+      "erro rate : 0.08996539792387544\n",
+      "miss rate : 0.16711595718998953\n",
+      "clss rate : 0.9822534342451779\n"
      ]
     }
    ],
    "source": [
     "temp_list = [i.split('/')[-1] for i in seed_xml_names]\n",
+    "print('len temp_list : {0}'.format(len(temp_list)))\n",
     "\n",
     "generated_xml_dir_father = '/media/yyp/DATA/EVALUATE/' + time_str + '_detection_result/'\n",
     "generated_xml_dir_list = os.listdir(generated_xml_dir_father)\n",
     "print(generated_xml_dir_list)\n",
     "generated_xml_dir_list.sort()\n",
-    "cls_map = {'B':'bus','C':'car', 'T':'truck'}\n",
+    "cls_map = {'bus':'bus','car':'car', 'truck':'truck', 'B':'bus','C':'car', \n",
+    "           'T':'truck', 'motorbike':'motorbike', \n",
+    "           'bicycle':'bicycle', 'person':'person'}\n",
     "\n",
     "for generated_xml_dir in generated_xml_dir_list:\n",
     "    print('-------------------------------------')\n",
@@ -364,7 +371,7 @@
     "    generated_xml_names = os.listdir(generated_xml_dir)\n",
     "    generated_xml_names.sort()\n",
     "    #print(generated_xml_dir)\n",
-    "    #print(len(generated_xml_names))\n",
+    "    print('len generated_xml_names:{0}'.format(len(generated_xml_names)))\n",
     "    total_obj_num = 0\n",
     "    total_good_classify_num = 0\n",
     "    total_erro_detected_num = 0\n",
@@ -374,6 +381,7 @@
     "\n",
     "    for gene_xml in generated_xml_names:\n",
     "        if(gene_xml in temp_list):\n",
+    "            #print(gene_xml + ' in temp_list')\n",
     "            seed_xml_file_ = seed_xml_names[temp_list.index(gene_xml)]\n",
     "            seed_xml_file = seed_xml_file_.replace('/JPEGImages/', '/Annotations/')\n",
     "            gene_xml_file = generated_xml_dir + '/' + gene_xml\n",
@@ -392,6 +400,7 @@
     "            detected_num = 0\n",
     "            erro_bboxs = []\n",
     "            total_obj_num += len(s_objs)\n",
+    "            #print(total_obj_num)\n",
     "            #print('total obj number {0}'.format(len(s_objs)))\n",
     "            #print('total detec number {0}'.format(len(g_objs)))\n",
     "            '''\n",
@@ -421,6 +430,9 @@
     "            total_erro_detected_num += len(erro_bboxs)\n",
     "            total_miss_detected_num += len(s_objs)\n",
     "            total_good_detected_num += detected_num\n",
+    "        else:\n",
+    "            #print(gene_xml + ' not in temp_list')\n",
+    "            pass\n",
     "    print('good  : {0}'.format(total_good_detected_num))\n",
     "    print('erro  : {0}'.format(total_erro_detected_num))\n",
     "    print('miss  : {0}'.format(total_miss_detected_num))\n",
