--- a/recorrect_image_name_in_xml.ipynb
+++ b/recorrect_image_name_in_xml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,33 @@
     "import xml.etree.ElementTree as ET\n",
     "from PIL import Image\n",
     "\n",
-    "SEED_XML_DIR = '/data/wxjs/Annotations/'\n",
-    "SEED_IMG_DIR = '/data/wxjs/JPEGImages/'\n",
-    "SEED_CHG_DIR = '/data/wxjs/Changed_Annotations/'\n",
-    "TEST_DIR = '/data/wxjs/test/'\n",
-    "'''\n",
-    "seed_xml_names = os.listdir(SEED_XML_DIR)\n",
-    "seed_img_names = os.listdir(SEED_IMG_DIR)\n",
-    "seed_chg_names = os.listdir(SEED_CHG_DIR)\n",
-    "'''\n",
-    "\n",
-    "classes_ = ['slagcar']\n",
-    "classes = ['cs', 'cns', 'ncs', 'ncns']\n",
-    "test_img_file = './00a9e6f925d59563f493b282ed110cbc.jpg'"
+    "SEED_XML_DIR = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/Annotations/'\n",
+    "SEED_IMG_DIR = '/media/yyp/DATA/Public_Datasets/ZENITH_DATASETS/VOCdevkit_Highway/VOC2007/JPEGImages/'\n",
+    "SEED_CHG_DIR = SEED_XML_DIR\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed_xml_names_ = os.listdir(SEED_XML_DIR)\n",
+    "seed_xml_names_.sort()\n",
+    "for xml_name in seed_xml_names_:\n",
+    "    in_file = open(SEED_XML_DIR + xml_name)\n",
+    "    tree=ET.parse(in_file)\n",
+    "    root = tree.getroot()\n",
+    "    size = root.find('size')\n",
+    "    #w = int(size.find('width').text)    \n",
+    "    #h = int(size.find('height').text)\n",
+    "    filename = root.find('filename')\n",
+    "    imagename = xml_name[:-3] + 'jpg'\n",
+    "    if (filename.text != imagename):\n",
+    "        filename.text = imagename\n",
+    "        tree.write(SEED_XML_DIR + xml_name)\n",
+    "    else:\n",
+    "        continue"
    ]
   },
   {
@@ -65,15 +79,21 @@
     }
    ],
    "source": [
-    "seed_xml_names_ = ['00a9e6f925d59563f493b282ed110cbc.xml']\n",
+    "seed_xml_names_ = os.listdir(SEE_XML_DIR)\n",
+    "seed_xml_names.sort()\n",
     "for xml_name in seed_xml_names_:\n",
-    "    #in_file = open(SEED_XML_DIR + xml_name)\n",
-    "    in_file = open(xml_name)\n",
+    "    in_file = open(SEED_XML_DIR + xml_name)\n",
     "    tree=ET.parse(in_file)\n",
     "    root = tree.getroot()\n",
     "    size = root.find('size')\n",
     "    #w = int(size.find('width').text)    \n",
     "    #h = int(size.find('height').text)\n",
+    "    filename = root.find('filename')\n",
+    "    if (filename.text != xml_name):\n",
+    "        filename.text = xml_name\n",
+    "        tree.write(SEED_XML_DIR + xml_name)\n",
+    "    else:\n",
+    "        continue\n",
     "\n",
     "    for obj in root.iter('object'):\n",
     "        difficult = obj.find('difficult').text\n",
