--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -315,40 +315,29 @@
      "output_type": "stream",
      "text": [
       "len temp_list : 4973\n",
-      "['yolov3-tiny-ncs-without-last-maxpool-refined-anchors-6cls-extend-remove-maxpooling_new_150000', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors_130000new', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000']\n",
+      "['yolov3-tiny-ncs-without-last-maxpool-refined-anchors-6cls-extend-remove-maxpooling_new_150000', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors_130000new', 'yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000', 'yolov3_nob_7cls_100000', 'yolov3_nob_official_']\n",
       "-------------------------------------\n",
-      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors-6cls-extend-remove-maxpooling_new_150000\n",
-      "len generated_xml_names:4948\n",
-      "good  : 42579\n",
-      "erro  : 5175\n",
-      "miss  : 7888\n",
-      "total : 49705\n",
-      "good rate : 0.8566341414344634\n",
-      "erro rate : 0.10411427421788552\n",
-      "miss rate : 0.1586963082184891\n",
-      "clss rate : 0.9821038540125414\n",
+      "yolov3_nob_7cls_100000\n",
+      "len generated_xml_names:4968\n",
+      "good  : 45932\n",
+      "erro  : 3803\n",
+      "miss  : 3810\n",
+      "total : 49742\n",
+      "good rate : 0.923404768606007\n",
+      "erro rate : 0.07645450524707491\n",
+      "miss rate : 0.076595231393993\n",
+      "clss rate : 0.9718061482191065\n",
       "-------------------------------------\n",
-      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors_130000new\n",
-      "len generated_xml_names:4939\n",
-      "good  : 41581\n",
-      "erro  : 5583\n",
-      "miss  : 8883\n",
-      "total : 49706\n",
-      "good rate : 0.8365388484287611\n",
-      "erro rate : 0.11232044421196637\n",
-      "miss rate : 0.17871081961936186\n",
-      "clss rate : 0.9817705201895096\n",
-      "-------------------------------------\n",
-      "yolov3-tiny-ncs-without-last-maxpool-refined-anchors_150000\n",
-      "len generated_xml_names:4940\n",
-      "good  : 42149\n",
-      "erro  : 4472\n",
-      "miss  : 8307\n",
-      "total : 49708\n",
-      "good rate : 0.8479319224269736\n",
-      "erro rate : 0.08996539792387544\n",
-      "miss rate : 0.16711595718998953\n",
-      "clss rate : 0.9822534342451779\n"
+      "yolov3_nob_official_\n",
+      "len generated_xml_names:765\n",
+      "good  : 5490\n",
+      "erro  : 1248\n",
+      "miss  : 1320\n",
+      "total : 6810\n",
+      "good rate : 0.8061674008810573\n",
+      "erro rate : 0.18325991189427313\n",
+      "miss rate : 0.19383259911894274\n",
+      "clss rate : 0.9400728597449909\n"
      ]
     }
    ],
@@ -364,7 +353,7 @@
     "           'T':'truck', 'motorbike':'motorbike', \n",
     "           'bicycle':'bicycle', 'person':'person'}\n",
     "\n",
-    "for generated_xml_dir in generated_xml_dir_list:\n",
+    "for generated_xml_dir in generated_xml_dir_list[-2:]:\n",
     "    print('-------------------------------------')\n",
     "    print(generated_xml_dir)\n",
     "    generated_xml_dir = generated_xml_dir_father + generated_xml_dir + '/'\n",
@@ -416,9 +405,10 @@
     "                    detected_num += 1\n",
     "                    s_cls = get_cls_from_xmlobj(s_max_obj)\n",
     "                    g_cls = get_cls_from_xmlobj(g_obj)\n",
+    "                    #print('s_cls:{0};g_cls:{1}'.format(s_cls, g_cls))\n",
     "                    if(s_cls == cls_map[g_cls]):\n",
     "                        total_good_classify_num += 1    \n",
-    "                        s_objs.remove(s_max_obj)                \n",
+    "                    s_objs.remove(s_max_obj)                \n",
     "                else:\n",
     "                    erro_bboxs.append(g_obj)\n",
     "            '''\n",
